# godot-hs-example

./: .gitignore  CMakeLists.txt  README.md  godot-hs-example.cabal  godot-hs-example.gdextension
demo/: .gitignore  icon.svg.import  main.tscn  project.godot
hs-shim/: CMakeLists.txt  hs-shim.gdextension  register_types.cpp
src/: Add1.hs  Hello.hs  MyClass.cpp  MyClass.h  MyClass.hs  _exports.def  exports.def  hs-logic.gdextension  register_types.cpp
src/hs-shim/: register_types.cpp
