cabal-version:      3.0
name:               godot-hs-example
version:            0.1.0.0
license:            MIT
author:             Oscar McNoe
maintainer:         oscar.mcnoe@gmail.com

foreign-library godot-hs-example
    type:             native-shared
    if os(Windows)
        options:      standalone
    build-depends:    base ^>=4.18.1.0
    default-language: GHC2021
    hs-source-dirs:   src
    ghc-options:      -Wall -O2
    other-modules:
        MyClass
    cxx-options:      -Wall -std=c++17 -fno-exceptions
    cxx-sources:
        src/MyClass.cpp
        src/register_types.cpp
    include-dirs:
        godot-cpp/gdextension
        godot-cpp/include
        build/gen/include
    extra-lib-dirs:   build/bin/
    extra-libraries:
        c++
        godot-cpp.windows.debug.64
